--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.11.2",
+    "bcrypt": "~0.8.0",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0"
   },
   "scripts": {
     "debug": "node debug app.js",
